[package]
name = "bcr-wdc-swap-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bcr-wdc-webapi = { path = "../bcr-wdc-webapi" }
cashu.workspace = true
chrono.workspace = true
reqwest = {workspace = true}
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
bcr-wdc-key-service = {path = "../bcr-wdc-key-service", features = ["test-utils"]}
bcr-wdc-keys = {path = "../bcr-wdc-keys", features = ["test-utils"]}
bcr-wdc-swap-service = {path = "../bcr-wdc-swap-service", features = ["test-utils"]}
tokio.workspace = true
