[package]
name = "bcr-wdc-swap-client"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bcr-wdc-webapi = {workspace = true}
cashu.workspace = true
chrono.workspace = true
reqwest = {workspace = true}
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
bcr-wdc-key-service = {workspace = true, features = ["test-utils"]}
bcr-wdc-swap-service = {workspace = true, features = ["test-utils"]}
bcr-wdc-utils = {workspace = true, features = ["test-utils"]}
tokio.workspace = true
