[package]
name = "bcr-wdc-swap-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
authorized = []

[dependencies]
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
cashu.workspace = true
chrono.workspace = true
reqwest = {workspace = true, features = ["json"]}
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
bcr-wdc-key-service = {workspace = true, features = ["test-utils"]}
bcr-wdc-swap-service = {workspace = true, features = ["test-utils"]}
bcr-wdc-utils = {workspace = true, features = ["test-utils"]}
tokio.workspace = true
