[package]
name = "bcr-wdc-swap-service"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
test-utils = ["axum-test", "bcr-wdc-utils/test-utils", "bcr-wdc-key-client/test-utils", "rand"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-wdc-key-client = {workspace = true}
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
cashu.workspace = true
chrono.workspace = true
config.workspace = true
env_logger.workspace = true
futures.workspace = true
itertools = {workspace = true}
log = {workspace = true, features = ["serde"]}
rand = {workspace = true, optional = true}
serde.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}

[dev-dependencies]
bcr-wdc-utils = { workspace = true, features = ["test-utils"] }
bip39 = {workspace = true}
mockall.workspace = true
rand.workspace = true
surrealdb = {workspace = true, features = ["kv-mem"]}
