[package]
name = "bcr-wdc-swap-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = ["axum-test", "bcr-wdc-utils/test-utils", "bcr-wdc-key-client/test-utils", "rand"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-wdc-key-client = {workspace = true, features = ["authorized"]}
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
cashu.workspace = true
chrono.workspace = true
config.workspace = true
futures.workspace = true
itertools = {workspace = true}
rand = {workspace = true, optional = true}
serde.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
bcr-wdc-utils = { workspace = true, features = ["test-utils"] }
bip39 = {workspace = true}
mockall.workspace = true
rand.workspace = true
surrealdb = {workspace = true, features = ["kv-mem"]}
