[package]
name = "bcr-wdc-treasury-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
authorized = ["bcr-wdc-utils/auth"]

[dependencies]
bcr-common = {workspace = true, features = ["authorized"]}
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bitcoin = {workspace = true}
chrono.workspace = true
reqwest = {workspace = true, features = ["json"]}
secp256k1.workspace = true
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
