[package]
name = "bcr-wdc-treasury-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
bcr-common = {workspace = true, features = ["authorized"]}
bcr-ebill-core = {workspace = true}
bcr-wdc-treasury-client = {workspace = true}
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = { workspace = true}
bip39 = {workspace = true}
bitcoin.workspace = true
borsh = { workspace = true }
cashu = { workspace = true, features = ["wallet"]}
cdk = {workspace = true, default-features = false, features = ["wallet"]}
cdk-common = {workspace = true}
cdk-redb = { workspace = true }
chrono.workspace = true
clwdr-client = {workspace = true}
config.workspace = true
futures = {workspace = true}
rand = {workspace = true}
reqwest = {workspace = true}
secp256k1 = {workspace = true, features = ["global-context"]}
serde.workspace = true
serde_json = {workspace = true}
surrealdb.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tokio-util = {workspace = true}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
uuid.workspace = true

[dev-dependencies]
bcr-common = {workspace = true, features = ["test-utils"] }
bcr-wdc-swap-service = { workspace = true, features = ["test-utils"] }
bcr-wdc-utils = { workspace = true , features = ["test-utils"] }
bcr-wdc-webapi = { workspace = true, features = ["test-utils"] }
itertools.workspace = true
mockall.workspace = true
rand.workspace = true
secp256k1 = {workspace = true, features = ["global-context"]}
surrealdb = {workspace = true, features = ["kv-mem"]}
