[package]
name = "bcr-wdc-utils"
version.workspace = true
edition.workspace = true
license.workspace = true


[features]
test-utils = ["rand"]
auth = ["reqwest/json", "tokio", "tracing"]


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcr-common = {workspace = true}
bcr-ebill-core.workspace = true
bitcoin = { workspace = true}
borsh = {workspace = true}
cashu = {workspace = true, features = ["swagger"]}
cdk-common = {workspace = true}
chrono.workspace = true
clwdr-client.workspace = true
itertools = {workspace = true}
rand = {workspace = true, optional  = true}
reqwest = {workspace = true}
secp256k1 = {workspace = true, features = ["global-context"]}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
thiserror.workspace = true
tokio = {workspace = true, features = ["time", "rt"], optional = true}
tracing = {workspace = true, optional = true}
url.workspace = true
uuid.workspace = true

[dev-dependencies]
bcr-wdc-utils = {workspace = true, features = ["test-utils"]}
rand = {workspace = true}
