[package]
name = "bcr-wdc-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"


[features]
test-utils = ["rand", "bcr-common/test-utils"]
auth = ["reqwest/json"]


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcr-common = {workspace = true}
bcr-ebill-core.workspace = true
bitcoin = { workspace = true}
built = {workspace = true, features = ["semver", "chrono"]}
chrono.workspace = true
ciborium = {workspace = true}
rand = {workspace = true, optional  = true}
reqwest = {workspace = true}
secp256k1 = {workspace = true, features = ["global-context"]}
serde = {workspace = true, features = ["derive"]}
thiserror.workspace = true
tokio = {workspace = true, features = ["time", "rt"]}
tokio-util = {workspace = true}
tracing = {workspace = true}
url.workspace = true

[dev-dependencies]
bcr-wdc-utils = {workspace = true, features = ["test-utils"]}
bcr-common = {workspace = true, features = ["test-utils"]}
rand = {workspace = true}

[build-dependencies]
built = {workspace = true, features = ["dependency-tree", "chrono"]}
