[package]
name = "bcr-wdc-wallet-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = ["axum-test"]

[dependencies]
anyhow = {workspace = true}
async-trait.workspace = true
axum = {workspace = true, features = ["macros"]}
axum-test = {workspace = true, optional = true}
bcr-common = {workspace = true, features = ["clwdr-client"]}
bcr-wdc-utils = {workspace = true}
bcr-wdc-webapi = {workspace = true}
bitcoin = {workspace = true}
borsh = {workspace = true}
chrono = {workspace = true, features = ["serde"]}
config = {workspace = true}
futures = {workspace = true}
serde.workspace = true
surrealdb = {workspace = true}
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tower-http = { version = "0.6.2" }
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
uuid = {workspace = true}

[dev-dependencies]
bcr-wdc-utils = {workspace = true, features = ["test-utils"]}
bcr-common = {workspace = true, features = ["test-utils"]}
mockall.workspace = true
surrealdb = {workspace = true, features = ["kv-mem"]}
