[package]
name = "bcr-wdc-wallet-aggregator"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true, features = ["macros"]}
bcr-common = {workspace = true, features = ["clwdr-client"]}
bcr-wdc-utils = {workspace = true}
borsh = {workspace = true}
chrono = {workspace = true, features = ["serde"]}
config = {workspace = true}
serde.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["signal"]}
tracing = {workspace = true }
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}

[dev-dependencies]
bcr-wdc-utils = {workspace = true, features = ["test-utils"]}
bcr-common = {workspace = true, features = ["test-utils"]}
mockall.workspace = true
surrealdb = {workspace = true, features = ["kv-mem"]}
