[package]
name = "bcr-wdc-webapi"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "bcr_wdc_webapi"
path = "src/lib.rs"

[[bin]]
name = "bcr-wdc-webapi-devtool"
path = "src/bin/devtool.rs"
required-features = ["test-utils"]

[dependencies]
bcr-ebill-core.workspace = true
bcr-wdc-utils = {workspace = true, features = ["test-utils"] }
bdk_wallet = {workspace = true}
bitcoin.workspace = true
borsh = {workspace = true, features = ["derive"]}
cashu = {workspace = true, features = ["swagger"]}
chrono.workspace = true
rand = {workspace = true}
rust_decimal.workspace = true
serde.workspace = true
strum = {workspace = true, features = ["derive"]}
utoipa = {workspace = true, features = ["chrono", "uuid", "decimal"]}
uuid = {workspace = true, features = ["serde"]}
bip39 = {workspace = true, features = ["serde"]}
serde_json.workspace = true
serde_repr.workspace = true 
url = {workspace = true, features = ["serde"]}
thiserror.workspace = true

[features]
default = []
test-utils = []
