[package]
name = "bcr-wdc-webapi"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "bcr_wdc_webapi"
path = "src/lib.rs"

[[bin]]
name = "bcr-wdc-webapi-devtool"
path = "src/bin/devtool.rs"
required-features = ["test-utils"]

[dependencies]
bcr-common = {workspace = true}
bcr-ebill-api = {workspace = true}
bcr-ebill-core.workspace = true
bcr-wdc-utils = {workspace = true, features = ["test-utils"] }
bdk_wallet = {workspace = true}
bip39 = {workspace = true, features = ["serde"]}
bitcoin.workspace = true
borsh = {workspace = true, features = ["derive"]}
cashu = {workspace = true, features = ["swagger"]}
chrono.workspace = true
rand = {workspace = true}
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true 
strum = {workspace = true, features = ["derive"]}
thiserror.workspace = true
url = {workspace = true, features = ["serde"]}
utoipa = {workspace = true, features = ["chrono", "uuid", "decimal"]}
uuid = {workspace = true, features = ["serde"]}

[features]
default = []
test-utils = ["bcr-common/test-utils"]
