[package]
name = "bcr-wdc-webapi"
version.workspace = true
edition.workspace = true
license.workspace = true


[lib]
name = "bcr_wdc_webapi"
path = "src/lib.rs"

[[bin]]
name = "bcr-wdc-webapi-devtool"
path = "src/bin/devtool.rs"
required-features = ["test-utils"]

[dependencies]
bcr-common = {workspace = true}
bcr-ebill-core.workspace = true
bcr-wdc-utils = {workspace = true, features = ["test-utils"] }
bitcoin.workspace = true
chrono.workspace = true
rand = {workspace = true}
serde.workspace = true
serde_json.workspace = true
uuid = {workspace = true, features = ["serde"]}

[features]
default = []
test-utils = ["bcr-common/test-utils"]
