[package]
name = "wildcat"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bitcoin.workspace = true
bcr-wdc-keys = { path = "../bcr-wdc-keys" }
cdk.workspace = true
chrono.workspace = true
config = {version = "0.15"}
env_logger = {version = "0.11"}
hex = {version = "0.4"}
log.workspace = true
rust_decimal.workspace = true
serde.workspace = true
strum = {version = "0.27", features = ["derive"]}
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
bcr-web-api = {path = "../bcr-web-api"}


[dev-dependencies]
bcr-wdc-keys = { path = "../bcr-wdc-keys", features = ["test-utils"] }
bip39 = {version = "2.1"}
mockall.workspace = true
rand = {version = "0.9"}
