[package]
name = "wildcat"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = {version = "1.0"}
async-trait.workspace = true
axum.workspace = true
bitcoin.workspace = true
cdk.workspace = true
chrono.workspace = true
config = {version = "0.15"}
env_logger = {version = "0.11"}
hex = {version = "0.4"}
log.workspace = true
rust_decimal.workspace = true
serde.workspace = true
strum = {version = "0.27", features = ["derive"]}
surrealdb.workspace = true
thiserror = {version = "2.0"}
tokio.workspace = true
uuid.workspace = true
bcr-web-api = {path = "../bcr-web-api"}


[dev-dependencies]
bip39 = {version = "2.1"}
mockall = {version = "0.13"}
once_cell = {version = "1.20"}
rand = {version = "0.8"}
