[package]
name = "wildcat"
version = "0.1.0"
edition = "2021"


[dependencies]

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bcr-wdc-keys = { path = "../bcr-wdc-keys" }
bcr-wdc-webapi = {path = "../bcr-wdc-webapi"}
bitcoin.workspace = true
cdk.workspace = true
chrono.workspace = true
config = {version = "0.15"}
env_logger = {version = "0.11"}
hex = {version = "0.4"}
log.workspace = true
rust_decimal.workspace = true
serde.workspace = true
strum = {version = "0.27", features = ["derive"]}
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
bcr-wdc-keys = { path = "../bcr-wdc-keys", features = ["test-utils"] }
bip39 = {version = "2.1"}
mockall.workspace = true
rand = {version = "0.9"}
